# SimpleIME

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ChangeLogs  ChangeLogs.adoc  LICENSE  ModMain.bbcode  README.md  SimpleImeSupport.h  TODO.md  cliff.toml  extract_i18n.py  imconfig.h  test.cmake
.github/workflows/: release.yml
assets/lucide/: lucide-icons.txt
cmake/: version.rc.in
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml  info.xml.in
contrib/Distribution/patch/DefaultRaceMenu/: racesex_menu.swf
contrib/Distribution/themes/: classic_theme.ini  darcula_theme.ini  visual_studio_theme.ini
contrib/Distribution/translate/: translate_chinese.ini  translate_chinese.toml  translate_english.ini  translate_english.toml
contrib/config/: SimpleIME.ini  SimpleIME.toml  SimpleIME_debug.ini
contrib/fomod/: ModuleConfig.xml
contrib/patch/RaceMenuAE/: racesex_menu.swf
contrib/themes/: light_theme.ini  modern_theme.ini
docs/: BUGs.md  Changes.md  Font Module.md  IME Manage.md  TODO.md  i18n.md
docs/adr/: 0001-toolwindow-translator-lifecycle.md  0002-fix-GfxCharEvent-memory-leak.md
docs/v2.0.0/: BUGs.md  Changes.md
include/: AppConfig.h  Configs.h  Device.h  FakeDirectInputDevice.h  Hooks.hpp  ImGuiThemeLoader.h  ImeApp.h  ImeUI.h  ImeWnd.hpp  LangProfileUtil.h  PCH.h  SystemImeLoader.h  Utils.h  WcharBuf.h  context.h  enumeration.h  icons.h
include/RE/: ControlMap.h  GFxCharEvent.h  GRectEx.h
include/configs/: AppConfig.h  ConfigSerializer.h  Configs.h  CustomMessage.h  configuration.h  converter.h  settings_converter.h
include/core/: EventHandler.h  State.h  Translation.h
include/hooks/: Hooks.hpp  ScaleformHook.h  UiAddMessageHook.h  UiHooks.h  WinHooks.h
include/i18n/: TranslationLoader.h  TranslatorHolder.h  translator_manager.h
include/ime/: BaseImeManager.h  CandidateUi.h  IImeModule.h  ITextService.h  ITextServiceFactory.h  ImeController.h  ImeManager.h  ImeManagerComposer.h  ImeSupportUtils.h  ImmImeHandler.h  InputMethod.h  PermanentFocusImeManager.h  TemporaryFocusImeManager.h  TextEditor.h  ime.h
include/menu/: ImeMenu.h  MenuNames.h  ToolWindowMenu.h
include/tsf/: ConversionModeUtil.h  InputMethodManager.h  LangProfile.h  LangProfileUtil.h  TextStore.h  TsfCompartment.h  TsfSupport.h
include/ui/: DebounceTimer.h  ErrorNotifier.h  ImGuiManager.h  ImeOverlay.h  ImeUI.h  ImeUIWidgets.h  ImeWindow.h  LanguageBar.h  Settings.h  SettingsManager.h  SettingsWindow.h  TaskQueue.h  ToolWindow.h  UiSettings.h  imgui_system.h
include/ui/fonts/: FontBuilder.h  FontBuilderPanel.h  FontBuilderView.h  FontManager.h  FontPreviewPanel.h  ImFontWrap.h  preview_panel.h
include/ui/panels/: AppearancePanel.h
include/utils/: FocusGFxCharacterInfo.h  FontManager.h  InputFocusAnchor.h  Utils.cpp  Utils.h
nexus/: main.bbcode  pinned-comment.bbcode
nexus/articles/: compatibility.bbcode  user-guide-zh.bbcode  user-guide.bbcode
src/: AppConfig.cpp  Hooks.cpp  ImGuiThemeLoader.cpp  ImeApp.cpp  ImeUI.cpp  ImeWnd.cpp  LangProfileUtil.cpp  PCH.h  ScaleformHook.cpp  SystemImeLoader.cpp  WcharBuf.cpp  context.cpp  plugin.cpp
src/RE/: ControlMap.cpp
src/configs/: ConfigSerializer.cpp  settings_converter.cpp
src/core/: EventHandler.cpp  State.cpp  Translation.cpp
src/hooks/: Hooks.cpp  ScaleformHook.cpp  UiAddMessageHook.cpp  UiHooks.cpp  WinHooks.cpp
src/i18n/: TranslationLoader.cpp  translator_manager.cpp
src/ime/: ImeController.cpp  ImeManager.cpp  ImeManagerComposer.cpp  ImeSupportUtils.cpp  Imm32TextService.cpp  ImmImeHandler.cpp  InputMethod.cpp  PermanentFocusImeManager.cpp  TemporaryFocusImeManager.cpp  TextEditor.cpp
src/menu/: ImeMenu.cpp  ToolWindowMenu.cpp
src/tsf/: InputMethodManager.cpp  LangProfileUtil.cpp  TextService.cpp  TextStore.cpp  TsfCompartment.cpp  TsfSupport.cpp  TsfSupport.h
src/ui/: ErrorNotifier.cpp  ImGuiManager.cpp  ImeOverlay.cpp  ImeUI.cpp  ImeUIWidgets.cpp  ImeWindow.cpp  LanguageBar.cpp  SettingsWindow.cpp  ToolWindow.cpp  UiSettings.cpp  imgui_system.cpp
src/ui/fonts/: FontManager.cpp  Fonts.cpp  preview_panel.cpp
src/ui/panels/: AppearancePanel.cpp
src/utils/: FocusGFxCharacterInfo.cpp  FontManager.cpp  InputFocusAnchor.cpp
test/: AppConfigTest.cpp  ConfigSerializerTest.cpp  ImGuiThemeLoaderTest.cpp  ImeManagerComposerTest.cpp  RandomUtils.h  TextEditorTest.cpp  TranslationLoaderTest.cpp  TranslatorManagerTest.cpp  WCharUtilsTest.cpp  settings_converter_test.cpp
test/resources/: SimpleIME.ini  SimpleIME.toml
